only explicitely federate the (one) arista metric we need

--- a/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
+++ b/system/kube-monitoring/charts/prometheus-frontend/templates/config.yaml
@@ -156,7 +156,7 @@ data:
           - '{__name__=~"^security_group_(max|total)_entanglement$"}'
           - '{__name__=~"^skydns_.+"}'
           - '{__name__=~"^snmp_asr_.+"}'
-          - '{__name__=~"^snmp_arista_.+"}'
+          - '{__name__=~"^snmp_arista_dot1qVlanFdbId"}'
           - '{__name__=~"^snmp_f5_.+"}'
           - '{__name__=~"^sql_openstack_.+"}'
           - '{__name__=~"^mysql_global_status_.+"}'
