inital commit for elk6

--- a/openstack/elk/templates/es-etc-configmap.yaml
+++ b/openstack/elk/templates/es-etc-configmap.yaml
@@ -15,5 +15,7 @@ data:
 {{ include "elk/templates/etc/_readonlyrest.yml.tpl" . | indent 4 }}
   log4j2.properties: |
 {{ include "elk/templates/etc/_log4j2.properties.tpl" . | indent 4 }}
+  java.security: |
+{{ include "elk/templates/etc/_java.security.tpl" . | indent 4 }}
   jvm.options: |
 {{ include "elk/templates/etc/_jvm.options.tpl" . | indent 4 }}
