--- a/openstack/elk/templates/es-master-deployment.yaml
+++ b/openstack/elk/templates/es-master-deployment.yaml
@@ -66,10 +66,8 @@ spec:
                 fieldPath: metadata.name
           - name: KUBERNETES_CA_CERTIFICATE_FILE
             value: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-          - name: DISCOVERY_SERVICE
-            value: es-master
-          - name: CLUSTER_NAME
-            value: elasticsearch
+          - name: NUMBER_OF_MASTERS
+            value: "2"
           - name: NODE_MASTER
             value: "true"
           - name: NODE_DATA
@@ -78,6 +76,8 @@ spec:
             value: "false"
           - name: HTTP_ENABLE
             value: "true"
+          - name: ES_JAVA_OPTS
+            value: "-Xms1g -Xmx1g"
         volumeMounts:
           - mountPath: /es-bin
             name: es-bin
