--- a/openstack/vcenter-utilities/templates/vcenter_datacenter_exporter_configmap.yaml
+++ b/openstack/vcenter-utilities/templates/vcenter_datacenter_exporter_configmap.yaml
@@ -1,14 +1,14 @@
 {{- if .Capabilities.APIVersions.Has "vcenter-operator.stable.sap.cc/v1" }}
-{{- if .Values.vcenter_exporter.enabled }}
-{{- if .Values.vcenter_exporter.exporter_types }}
+{{- if .Values.vcenter_exporters.enabled }}
 apiVersion: vcenter-operator.stable.sap.cc/v1
 kind: VCenterTemplate
 metadata:
   name: 'vcenter-datacenter-exporter-configmap'
   scope: 'datacenter'
 {{ $global_values := .Values }}
+{{- if .Values.vcenter_exporters.exporter_types }}
 template: |
-{{- range $exporter_type_values := .Values.vcenter_exporter.exporter_types }}{{`
+{{- range $exporter_type_values := $global_values.vcenter_exporters.exporter_types }}{{`
   ---
   kind: ConfigMap
   apiVersion: v1
@@ -21,44 +21,33 @@ template: |
       component: configuration
   data:
     config-{{ name }}-`}}{{ $exporter_type_values.name }}{{`.yaml: |
-      main:
+      prometheus_port: `}}{{ $global_values.vcenter_exporters.prometheus_port }}{{`
+      log_level: `}}{{ $global_values.vcenter_exporters.device_information.log_level | quote }}{{`
+      device_information:
+        hostname: {{ host | quote }}
+        username: "{{ username }}"
+        password: "{{ password }}"
+        port: `}}{{ $global_values.vcenter_exporters.device_information.port | quote }}{{`
+        ignore_ssl: `}}{{ $global_values.vcenter_exporters.device_information.ignore_ssl | quote }}{{`
         availability_zone: {{ availability_zone | quote }}
-        prometheus_port: `}}{{ $global_values.vcenter_exporter.prometheus_port | quote }}{{`
-        vcenter_host: {{ host | quote }}
-        vcenter_user: {{ username | quote }}
-        vcenter_password: {{ password | quote }}
-        vcenter_port: `}}{{ $global_values.vcenter_exporter.vcenter_port | quote }}{{`
-        vc_cluster_match_regex: `}}{{ $global_values.vcenter_exporter.vc_cluster_match_regex | quote }}{{`
-        ignore_ssl: `}}{{ $global_values.vcenter_exporter.ignore_ssl | quote }}{{`
-        vc_polling_interval: `}}{{ if $exporter_type_values.vc_polling_interval }}{{ $exporter_type_values.vc_polling_interval }}{{ else }}{{ $global_values.vcenter_exporter.vc_polling_interval }}{{ end }}{{`
-        exporter_log_level: `}}{{ $global_values.vcenter_exporter.exporter_log_level | quote }}{{`
-        name_shortening_regex: `}}{{ $global_values.vcenter_exporter.name_shortening_regex | quote }}{{`
-        ignore_vm_match_regex: `}}{{ $global_values.vcenter_exporter.ignore_vm_match_regex | quote }}{{`
-        ignore_ds_match_regex: `}}{{ $global_values.vcenter_exporter.ignore_ds_match_regex | quote }}{{`
-        vm_metrics:
-        - 'cpu.latency.average'
-        - 'cpu.usage.average'
-        - 'cpu.usagemhz.average'
-        - 'cpu.wait.summation'
-        - 'disk.usage.average'
-        - 'disk.numberRead.summation'
-        - 'disk.numberWrite.summation'
-        - 'mem.usage.average'
-        - 'net.usage.average'
-        - 'net.bytesRx.average'
-        - 'net.bytesTx.average'
-        - 'net.droppedRx.summation'
-        - 'net.droppedTx.summation'
-        - 'net.errorsRx.summation'
-        - 'net.errorsTx.summation'
-        - 'net.packetsRx.summation'
-        - 'net.packetsTx.summation'
-        - 'virtualDisk.read.average'
-        - 'virtualDisk.write.average'
-        - 'virtualDisk.readIOI.latest'
-        - 'virtualDisk.writeIOI.latest'
-        - 'virtualDisk.totalReadLatency.average'
-        - 'virtualDisk.totalWriteLatency.average'
+      exporter_types:
+        `}}{{ $exporter_type_values.name }}{{`:
+          name: `}}{{ $exporter_type_values.name | quote }}{{`
+        `}}{{- range $key, $val := $exporter_type_values }}
+        {{ if eq $key "collector" }}
+          {{ $key }}:
+            {{- range $listitem := $val }}
+            - {{ $listitem }}
+            {{- end}}
+        {{ else if eq $key "vm_metrics" }}
+          {{ $key }}:
+            {{- range $listitem := $val }}
+            - {{ $listitem }}
+            {{- end }}
+        {{ else }}
+          {{ $key }}: {{ $val | quote }}
+        {{- end }}
+        {{- end }}{{`
 `}}
 {{- end }}
 {{- end }}
