--- a/openstack/glance/values.yaml
+++ b/openstack/glance/values.yaml
@@ -98,6 +98,34 @@ tempest:
 
 unittest:
   enabled: false
+  
+pgmetrics:
+  name: glance
+  customMetrics:
+     openstack_glance_image:
+       query: "SELECT id, name, status, size, owner, visibility, COUNT(*) AS gauge from images where deleted='false' GROUP BY id"
+       metrics:
+         - id:
+             usage: "LABEL"
+             description: "Image ID"
+         - name:
+             usage: "LABEL"
+             description: "Image Name"
+         - status:
+             usage: "LABEL"
+             description: "Image Status"
+         - size:
+             usage: "LABEL"
+             description: "Image Size"
+         - owner:
+             usage: "LABEL"
+             description: "Image Owner"
+         - visibility:
+             usage: "LABEL"
+             description: "Image visibility"
+         - gauge:
+             usage: "GAUGE"
+             description: "Image Count"  
 
 postgresql:
   imageTag: '9.4.14'
