[keystone] added resilience against incomplete deployments

--- a/openstack/keystone/templates/tests/keystone-tempest.yaml
+++ b/openstack/keystone/templates/tests/keystone-tempest.yaml
@@ -47,7 +47,7 @@ spec:
         - name: OS_USERNAME
           value: "admin"
         - name: OS_PASSWORD
-          value: {{ .Values.tempest.adminPassword | quote }}
+          value: {{ required "A valid .Values.tempest.adminPassword required!" .Values.tempest.adminPassword | quote }}
         - name: OS_USER_DOMAIN_NAME
           value: "tempest"
         - name: OS_DOMAIN_NAME
