--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -8,7 +8,7 @@ global:
 # region: cluster
 # clusterDomain: cluster.local
   dbUser: keystone
-  dbPassword: DEFINE-IN-REGION-VALUES
+  dbPassword: ""
 # imageRegistry: hub.global.cloud.sap
 
 debug: False
@@ -24,7 +24,7 @@ release: rocky
 
 api:
   image: "monsoon/loci-keystone"
-  imageTag: rocky-20190114152917
+  #imageTag: latest
 
   ## Specify a imagePullPolicy
   ## 'Always' if imageTag is 'latest', else set to 'IfNotPresent'
@@ -33,11 +33,11 @@ api:
   # imagePullPolicy:
 
   adminUser: admin
-  adminPassword: DEFINE-IN-REGION-VALUES
+  adminPassword: ""
   adminProjectName: admin
   cloudAdminDomainName: Default
   cloudAdminProjectName: admin
-  cloudAdminProjectId: put-your-cloud-admin-project-id-here
+  cloudAdminProjectId: ""
 
   notifications:
     enabled: true
@@ -64,13 +64,11 @@ api:
   fernet:
     maxActiveKeys: 3
     secrets:
-      0: c1dVSlFZVjRQRnBGR3pwSk1nMll6eEFwX2VDNURwRFVzLVd5aEVYaVI1dz0=
-      1: M1V0dHp6bk5LYzVlQ1doMjdvUUctSGdmVFFEcWxIeDZXdHFDT25vT3RHUT0=
+      0: <put-your-fernet-keys-here>
 
   credentials:
     secrets:
-      0: RUdXZU5oVFR1TUU3TkFqazJrZWpqSE5vZ0lqeHFMTTljeUZxb2dZakNQZz0=
-      1: OUhUQnBzTDBLTkFfTnhqZlFWX0dmc0tlc2FnUUZYTFBrN2hpWldpQmN6cz0=
+      0: <put-your-credential-keys-here>
 
   auth:
   # Allowed authentication methods. (list value)
@@ -146,7 +144,7 @@ api:
 
 cron:
   image: "monsoon/loci-keystone"
-  imageTag: rocky-20190114152917
+  #imageTag: latest
 
   cronSchedule: "0 * * * *"
 
@@ -173,8 +171,8 @@ cache:
 tempest:
   image: "monsoon/rally-openstack"
   imageTag: "ccloud-1.2.0"
-  adminPassword: DEFINE-IN-REGION-VALUES
-  userPassword: DEFINE-IN-REGION-VALUES
+  adminPassword: ""
+  userPassword: ""
 # tempest domain-id  -- do not set in production environments!
   domainId: not_set_this_in_production
 
@@ -218,9 +216,9 @@ rabbitmq:
   # host: rabbitmq
   users:
     default:
-      password: DEFINE-IN-REGION-VALUES
+      password: ""
     admin:
-      password: DEFINE-IN-REGION-VALUES
+      password: ""
 
 #  resources:
 #    requests:
@@ -232,13 +230,13 @@ rabbitmq:
 
   metrics:
     enabled: true
-    password: DEFINE-IN-REGION-VALUES
+    password: ""
 
 
 postgresql:
   postgresDatabase: keystone
   postgresUser: postgres
-  postgresPassword: DEFINE-IN-REGION-VALUES
+  postgresPassword: ""
 
   dbInit: keystone-db-init
   dbMaintain: keystone-db-maintain
