--- a/openstack/keystone/templates/configmap-db-init.yaml
+++ b/openstack/keystone/templates/configmap-db-init.yaml
@@ -14,6 +14,6 @@ data:
     #!/usr/bin/env bash
     export PGUSER={{ default "postgres" .Values.postgresql.postgresUser }}
     psql <<- EOSQL
-        CREATE ROLE {{ .Values.global.dbUser }} WITH ENCRYPTED PASSWORD '{{ .Values.global.dbPassword }}' LOGIN;
+        CREATE ROLE {{ .Values.global.dbUser }} WITH ENCRYPTED PASSWORD '{{ required "A valid .Values.global.dbPassword required!" .Values.global.dbPassword }}' LOGIN;
         GRANT ALL PRIVILEGES ON DATABASE {{ .Values.postgresql.postgresDatabase }} TO {{ .Values.global.dbUser }};
     EOSQL
