--- a/openstack/keystone/templates/configmap-db-maintain.yaml
+++ b/openstack/keystone/templates/configmap-db-maintain.yaml
@@ -14,6 +14,6 @@ data:
     #!/usr/bin/env bash
     export PGUSER={{ default "postgres" .Values.postgresql.postgresUser }}
     psql <<- EOSQL
-        ALTER ROLE {{ .Values.global.dbUser }} WITH ENCRYPTED PASSWORD '{{ .Values.global.dbPassword }}';
-        ALTER ROLE {{ .Values.postgresql.postgresUser }} WITH ENCRYPTED PASSWORD '{{ .Values.postgresql.postgresPassword }}';
+        ALTER ROLE {{ .Values.global.dbUser }} WITH ENCRYPTED PASSWORD '{{ required "A valid .Values.global.dbPassword required!" .Values.global.dbPassword }}';
+        ALTER ROLE {{ .Values.postgresql.postgresUser }} WITH ENCRYPTED PASSWORD '{{ required "A valid .Values.postgresql.postgresPassword required!" .Values.postgresql.postgresPassword }}';
     EOSQL
