[keystone] enable selective tempest support

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -169,6 +169,7 @@ cache:
   expiration_time: 600
 
 tempest:
+  enabled: false
   image: "monsoon/rally-openstack"
   imageTag: "ccloud-1.2.0"
   adminPassword: ""
