--- a/openstack/keystone/templates/configmap-bin.yaml
+++ b/openstack/keystone/templates/configmap-bin.yaml
@@ -20,5 +20,7 @@ data:
 {{ include (print .Template.BasePath "/bin/_repair_assignments.tpl") . | indent 4 }}
   keystone-api.sh: |
 {{ include (print .Template.BasePath "/bin/_keystone_api.sh.tpl") . | indent 4 }}
+{{- if .Values.tempest.enabled }}
   keystone-tempest.sh: |
 {{ include (print .Template.BasePath "/bin/_keystone_tempest.sh.tpl") . | indent 4 }}
+{{- end}}
