--- a/openstack/keystone/templates/configmap-etc.yaml
+++ b/openstack/keystone/templates/configmap-etc.yaml
@@ -22,12 +22,14 @@ data:
 {{ include (print .Template.BasePath "/etc/_sso_callback_template.html.tpl") . | indent 4 }}
   wsgi-keystone.conf: |
 {{ include (print .Template.BasePath "/etc/_wsgi-keystone.conf.tpl") . | indent 4 }}
+{{- if .Values.tempest.enabled }}
   tempest.conf: |
 {{ include (print .Template.BasePath "/etc/_tempest.conf.tpl") . | indent 4 }}
   accounts.yaml: |
 {{ include (print .Template.BasePath "/etc/_tempest_accounts.yaml.tpl") . | indent 4 }}
   rally_deployment_config.json: |
 {{ include (print .Template.BasePath "/etc/_rally_deployment_config.json.tpl") . | indent 4 }}
+{{- end }}
 {{- if .Values.watcher.enabled }}
   watcher.yaml: |
 {{ include (print .Template.BasePath "/etc/_watcher.yaml.tpl") . | indent 4 }}
