[domain-seeds] support selective tempest domain deployment - added resilience against incomplete deployments

--- a/openstack/domain-seeds/templates/domain-cc3test-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-cc3test-seed.yaml
@@ -151,7 +151,7 @@ spec:
         query_scope: one
         url: {{ .Values.ldapUrl | quote }}
         user: {{ .Values.ldapUser | quote }}
-        password: {{ .Values.ldapPassword | quote }}
+        password: {{ required "A valid .Values.ldapPassword required!" .Values.ldapPassword | quote }}
         suffix: {{ .Values.ldapSuffix | quote }}
         user_objectclass: user
         user_id_attribute: cn
