--- a/openstack/domain-seeds/templates/domain-tempest-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-tempest-seed.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.tempestAdminPassword }}
 apiVersion: "openstack.stable.sap.cc/v1"
 kind: "OpenstackSeed"
 metadata:
@@ -60,3 +61,4 @@ spec:
       - domain: tempest
         role: admin
         inherited: true
+{{- end }}
