--- a/openstack/domain-seeds/values.yaml
+++ b/openstack/domain-seeds/values.yaml
@@ -9,7 +9,7 @@ global:
 # AD/LDAP connection details
 ldapUrl: ldaps://ldap.global.cloud.sap:636
 ldapUser: CN=monsoon-service,CN=Users,DC=ad,DC=global,DC=cloud,DC=sap
-ldapPassword: DEFINE_IN_REGION_VALUES
+ldapPassword: ""
 ldapSuffix: DC=ad,DC=global,DC=cloud,DC=sap
 ldapDriver: cc_ldap
 
@@ -23,7 +23,7 @@ quayServicePassword: DEFINE_IN_REGION_VALUES
 kubernikusAdminPassword: DEFINE_IN_REGION_VALUES
 
 # tempest domain - service user credentials
-tempestAdminPassword: DEFINE_IN_REGION_VALUES
+tempestAdminPassword: ""
 
 # cc3test domain - user credentials
 cc3testAdminUser: DEFINE_IN_REGION_VALUES
