--- a/openstack/domain-seeds/templates/domain-bs-seed.yaml
+++ b/openstack/domain-seeds/templates/domain-bs-seed.yaml
@@ -134,7 +134,7 @@ spec:
         tls_req_cert: allow
         url: {{ .Values.ldapUrl | quote }}
         user: {{ .Values.ldapUser | quote }}
-        password: {{ .Values.ldapPassword | quote }}
+        password: {{ required "A valid .Values.ldapPassword required!" .Values.ldapPassword | quote }}
         suffix: {{ .Values.ldapSuffix | quote }}
         query_scope: one
         user_tree_dn: OU=Identities,{{ .Values.ldapSuffix }}
