adding helm require statement

--- a/system/unbound/templates/service.yaml
+++ b/system/unbound/templates/service.yaml
@@ -20,4 +20,4 @@ spec:
       protocol: UDP
       port: 53
       targetPort: dns-udp
-  externalIPs: ["{{.Values.unbound.externalIP}}"]
+  externalIPs: ["{{ required "A valid .Values.unbound.externalIP required!" .Values.unbound.externalIP }}"]
