--- a/openstack/keystone/templates/tests/keystone-tempest.yaml
+++ b/openstack/keystone/templates/tests/keystone-tempest.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.tempest.enabled }}
 apiVersion: v1
 kind: Pod
 metadata:
@@ -87,3 +88,4 @@ spec:
       configMap:
         name: keystone-bin
         defaultMode: 0555
+{{- end }}
