Adjusted exporter service to find prometheus port

--- a/openstack/vcenter-utilities/templates/vcenter_datacenter_exporter_service.yaml
+++ b/openstack/vcenter-utilities/templates/vcenter_datacenter_exporter_service.yaml
@@ -24,11 +24,11 @@ template: |
       {{- range $collector := $exporter_type_values.collector }}
       {{- if eq $collector "maia" }}
       maia.io/scrape: "true"
-      maia.io/port: {{ $exporter_type_values.prometheus_port | quote }}
+      maia.io/port: {{ $global_values.prometheus_port | quote }}
       {{- end }}
       {{- if eq $collector "prometheus" }}
       prometheus.io/scrape: "true"
-      prometheus.io/port: {{ $exporter_type_values.prometheus_port | quote }}
+      prometheus.io/port: {{ $global_values.prometheus_port | quote }}
       {{- end }}
       {{- end }}
     {{ end }}{{`
