--- a/openstack/glance/values.yaml
+++ b/openstack/glance/values.yaml
@@ -46,7 +46,7 @@ upgrades:
 api:
   debug: false
   resources:
-    enabled: false
+    enabled: true
     limits:
       memory: 128Mi
       cpu: 500m
@@ -57,7 +57,7 @@ api:
 registry:
   debug: false
   resources:
-    enabled: false
+    enabled: true
     limits:
       memory: 128Mi
       cpu: 500m
