[memcached] set k8s resource figures and enable by default

--- a/common/memcached/values.yaml
+++ b/common/memcached/values.yaml
@@ -24,13 +24,13 @@ memcached:
 ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
 ##
 resources:
-  enabled: false
+  enabled: true
   limits:
-    memory: "1024Mi"
-    cpu: "500m"
+    memory: 2048Mi
+    cpu: 100m
   requests:
-    memory: "1024Mi"
-    cpu: "500m"
+    memory: 1024Mi
+    cpu: 50m
 
 metrics:
   enabled: true
@@ -39,13 +39,13 @@ metrics:
 
   port: '9150'
   resources:
-    enabled: false
+    enabled: true
     limits:
-      memory: "128Mi"
-      cpu: "500m"
+      memory: 64Mi
+      cpu: 50m
     requests:
-      memory: "128Mi"
-      cpu: "500m"
+      memory: 36Mi
+      cpu: 10m
 
 replicas: 1
 
