[pgmetrics] set k8s resource figures and enable by default

--- a/common/pgmetrics/values.yaml
+++ b/common/pgmetrics/values.yaml
@@ -141,10 +141,10 @@ upgrades:
 ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
 ##
 resources:
-  enabled: false
+  enabled: true
   limits:
-    memory: 256Mi
-    cpu: 500m
+    memory: 128Mi
+    cpu: 4000m  # too much! ineffecient queries. this needs to come down
   requests:
-    memory: 256Mi
-    cpu: 500m
+    memory: 64Mi
+    cpu: 1000m
