[rabbitmq] set k8s resource figures and enable by default

--- a/common/rabbitmq/values.yaml
+++ b/common/rabbitmq/values.yaml
@@ -35,13 +35,12 @@ persistence:
   # existingClaim: claimName
 
 resources:
-  enabled: false
+  enabled: true
 
   requests:
     memory: 512Mi
-    cpu: 500m
+    cpu: 800m
   limits:
-    memory: 2Gi
     cpu: 1000m
 
 metrics:
@@ -52,13 +51,13 @@ metrics:
   password: null
   port: 9150
   resources:
-    enabled: false
+    enabled: true
     limits:
       memory: 128Mi
-      cpu: 500m
+      cpu: 50m
     requests:
-      memory: 128Mi
-      cpu: 500m
+      memory: 64Mi
+      cpu: 10m
 
 replicas: 1
 
