--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -546,6 +546,15 @@ rabbitmq:
   metrics:
     password: null
 
+  resources:
+    enabled: true
+
+    requests:
+      memory: 2Gi
+      cpu: 1000m
+    limits:
+      cpu: 2000m
+
 rabbitmq_notifications:
   name: nova
   persistence:
