--- a/openstack/vcenter-utilities/values.yaml
+++ b/openstack/vcenter-utilities/values.yaml
@@ -81,11 +81,11 @@ vcenter_exporter:
 
 vasa_exporter:
   enabled: False
-  docker_repo: DEFINED-IN-REGION-CHART
-  image_version: DEFINED-IN-REGION-CHART
+  # docker_repo: DEFINED-IN-REGION-CHART
+  # image_version: DEFINED-IN-REGION-CHART
   prometheus_port: 9102
   vp_port: 8143
   vp_user: administrator
-  vp_pass: DEFINED-IN-REGION-CHART
-  vvol_user: DEFINED-IN-REGION-CHART
-  vvol_pass: DEFINED-IN-REGION-CHART
+  # vp_pass: DEFINED-IN-REGION-CHART
+  vvol_user: admin
+  # vvol_pass: DEFINED-IN-REGION-CHART
