vasa-exporter: added vvol credentials

--- a/openstack/vcenter-utilities/templates/vasa-exporter-configmap.yaml
+++ b/openstack/vcenter-utilities/templates/vasa-exporter-configmap.yaml
@@ -21,6 +21,8 @@ template: |{{`
       port = `}}{{ .Values.vasa_exporter.vp_port | quote }}{{`
       vp_user = `}}'{{ .Values.vasa_exporter.vp_user }}'{{`
       vp_pass = `}}'{{ .Values.vasa_exporter.vp_pass }}'{{`
+      vvol_user = `}}'{{ .Values.vasa_exporter.vvol_user }}'{{`
+      vvol_pass = `}}'{{ .Values.vasa_exporter.vvol_pass }}'{{`
       vc_user = '{{ username }}'
       vc_pass = '{{ password }}'
       vc_host = {{ host | quote }}
