vasa-exporter: added vvol credentials
vasa-exporter: helm required function

--- a/openstack/vcenter-utilities/templates/vasa-exporter-configmap.yaml
+++ b/openstack/vcenter-utilities/templates/vasa-exporter-configmap.yaml
@@ -18,13 +18,15 @@ template: |{{`
   data:
     vasa_exporter-{{ name }}.cfg: |
       [Default]
-      port = `}}{{ .Values.vasa_exporter.vp_port | quote }}{{`
-      vp_user = `}}'{{ .Values.vasa_exporter.vp_user }}'{{`
-      vp_pass = `}}'{{ .Values.vasa_exporter.vp_pass }}'{{`
+      port = `}}{{ required " .vasa_exporter.port is missing" .Values.vasa_exporter.vp_port | quote }}{{`
+      vp_user = `}}'{{ required " .vasa_exporter.vp_user is missing" .Values.vasa_exporter.vp_user }}'{{`
+      vp_pass = `}}'{{ required " .vasa_exporter.vp_pass is missing" .Values.vasa_exporter.vp_pass }}'{{`
+      vvol_user = `}}'{{ required " .vasa_exporter.vvol_user is missing" .Values.vasa_exporter.vvol_user }}'{{`
+      vvol_pass = `}}'{{ required " .vasa_exporter.vvol_pass is missing" .Values.vasa_exporter.vvol_pass }}'{{`
       vc_user = '{{ username }}'
       vc_pass = '{{ password }}'
       vc_host = {{ host | quote }}
-      prometheus_port = `}}{{ .Values.vasa_exporter.prometheus_port | quote }}{{`
+      prometheus_port = `}}{{ required " .vasa_exporter.prometheus_port is missing" .Values.vasa_exporter.prometheus_port | quote }}{{`
 `}}
 {{- end }}
 {{- end }}
