add new vcenter nanny consistency checks

--- a/openstack/vcenter-utilities/values.yaml
+++ b/openstack/vcenter-utilities/values.yaml
@@ -2,7 +2,7 @@ vcenter_nanny:
   enabled: False
   docker_repo: DEFINED-IN-REGION-CHART
   image_version: DEFINED-IN-REGION-CHART
-  vcenter_nanny_debug: True
+  debug: True
   # dry run mode, i.e. just pretend to cleanup the entries
   dry_run: true
   # power off machines discovered as orphaned
@@ -24,7 +24,20 @@ vcenter_nanny:
   # really delete entities after how many iterations
   iterations: 14
 
-vcenter_exporters:
+vcenter_nanny_consistency:
+  enabled: False
+  # these two we use from the vcenter nanny entry above as we use the same docker image
+  # docker_repo: DEFINED-IN-REGION-CHART
+  # image_version: DEFINED-IN-REGION-CHART
+  debug: True
+  # dry run mode, i.e. just pretend to cleanup the entries
+  dry_run: true
+  # run the db cleanup every n minutes
+  interval: 60
+  # really delete entities after how many iterations
+  iterations: 3
+
+vcenter_exporter:
   enabled: False
   docker_repo: DEFINED-IN-REGION-CHART
   image_version: DEFINED-IN-REGION-CHART
