[keystone] reduce resource demands on some common components

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -221,13 +221,12 @@ rabbitmq:
     admin:
       password: ""
 
-#  resources:
-#    requests:
-#      memory: 512Mi
-#      cpu: 500m
-#    limits:
-#      memory: 2Gi
-#      cpu: 1000m
+  resources:
+    requests:
+      memory: 512Mi
+      cpu: 500m
+    limits:
+      cpu: 1000m
 
   metrics:
     enabled: true
@@ -312,6 +311,14 @@ pgmetrics:
         - gauge:
             usage: "GAUGE"
             description: "Total keystone role-assignment count per role"
+
+  resources:
+    requests:
+      memory: 24Mi
+      cpu: 10m
+    limits:
+      memory: 64Mi
+      cpu: 50m
 
 rbac:
   enabled: false
