--- a/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_service.yaml
+++ b/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_service.yaml
@@ -1,5 +1,5 @@
 {{- if .Capabilities.APIVersions.Has "vcenter-operator.stable.sap.cc/v1" }}
-{{- if .Values.vcenter_nanny.enabled }}
+{{- if .Values.vcenter_nanny_consistency.enabled }}
 apiVersion: vcenter-operator.stable.sap.cc/v1
 kind: VCenterTemplate
 metadata:
