--- a/openstack/limes/values.yaml
+++ b/openstack/limes/values.yaml
@@ -35,3 +35,7 @@ limes:
 
   # Set to true to allow all CORS origins. Useful for staging/QA, but not recommended for production.
   relaxed_cors: false
+
+  # Whether to apply resource requests/limits to containers.
+  resources:
+    enabled: false
