correct comments in the values file

--- a/openstack/vcenter-utilities/values.yaml
+++ b/openstack/vcenter-utilities/values.yaml
@@ -32,9 +32,9 @@ vcenter_nanny_consistency:
   debug: True
   # dry run mode, i.e. just pretend to cleanup the entries
   dry_run: true
-  # run the db cleanup every n minutes
+  # run the db consistency check every minutes
   interval: 60
-  # really delete entities after how many iterations
+  # warn after how many iterations
   iterations: 3
 
 vcenter_exporter:
