--- a/common/postgresql/templates/deployment.yaml
+++ b/common/postgresql/templates/deployment.yaml
@@ -86,7 +86,7 @@ spec:
           initialDelaySeconds: 5
           timeoutSeconds: 3
         resources:
-{{ toYaml .Values.resources | indent 10 }}
+{{ toYaml (required "missing .resources" .Values.resources) | indent 10 }}
         volumeMounts:
         - name: data
           mountPath: /postgresql
