--- a/common/postgresql/values.yaml
+++ b/common/postgresql/values.yaml
@@ -103,7 +103,16 @@ pod:
 upgrades:
   revisionHistory: 3
   podReplacementStrategy: Recreate
-
+## Configure resource requests and limits	
+## ref: http://kubernetes.io/docs/user-guide/compute-resources/	
+##	
+resources: {}
+#  limits:	
+#    memory: 256Mi	
+#    cpu: 500m	
+#  requests:	
+#    memory: 256Mi	
+#    cpu: 500m	
 metrics:
   enabled: false
   image: "wrouesnel/postgres_exporter"
