vasa-exporter: added vvol credentials (#554)
looks good to me - merging it

--- a/openstack/vcenter-utilities/values.yaml
+++ b/openstack/vcenter-utilities/values.yaml
@@ -87,3 +87,5 @@ vasa_exporter:
   vp_port: 8143
   vp_user: administrator
   vp_pass: DEFINED-IN-REGION-CHART
+  vvol_user: DEFINED-IN-REGION-CHART
+  vvol_pass: DEFINED-IN-REGION-CHART
