--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -470,6 +470,10 @@ postgresql:
     metrics: true
     os_password: null
 
+  resources: 
+    cpu: "1000m" # 1 cpu
+    memory: "7Gi" # 6.3Gi high recorded
+
   max_connections: 500
   shared_buffers: '4GB'
   temp_buffers: '32MB'
