nova resource requests - typo

--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -471,8 +471,9 @@ postgresql:
     os_password: null
 
   resources: 
-    cpu: "1000m" # 1 cpu
-    memory: "7Gi" # 6.3Gi high recorded
+    requests:
+      cpu: "1000m" # 1 cpu
+      memory: "7Gi" # 6.3Gi high recorded
 
   max_connections: 500
   shared_buffers: '4GB'
