openstack services postgres resource requests

--- a/openstack/barbican/values.yaml
+++ b/openstack/barbican/values.yaml
@@ -59,6 +59,11 @@ postgresql:
     metrics: true
     os_password: null
 
+  resources:
+    requests:
+      cpu: "500m" # 1/2 cpu
+      memory: "300Mi" # 160Mi high recorded
+
 pgmetrics:
   name: barbican
   db_name: barbican
