--- a/openstack/cinder/values.yaml
+++ b/openstack/cinder/values.yaml
@@ -156,6 +156,10 @@ postgresql:
     enabled: true
     metrics: true
     os_password: null
+  resources:
+    requests:
+      cpu: "500m" # 1/2 cpu
+      memory: "500Mi" # 350Mi high recorded
 
 audit:
   enabled: false
