--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -243,6 +243,11 @@ postgresql:
     enabled: false
     imageTag: v0.5.15
 
+  resources:
+    requests:
+      cpu: "500m" # 1/2 cpu
+      memory: "500Mi" # 370Mi high recorded
+
 pgmetrics:
   db_name: keystone
 
