--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -265,7 +265,12 @@ postgresql:
   backup:
     enabled: false
     image_version: v0.5.15
-    
+
+  resources:
+    requests:
+      cpu: "3000m" # 3 cpu
+      memory: "2Gi" # 1.5Gi high recorded
+
   max_connections: 500
   shared_buffers: '4GB'
   temp_buffers: '32MB'
