--- a/openstack/glance/values.yaml
+++ b/openstack/glance/values.yaml
@@ -114,6 +114,11 @@ postgresql:
     enabled: true
     metrics: true
     os_password: null
+  resources:
+    requests:
+      cpu: "500m" # 1/2 cpu
+      memory: "300Mi" # 140Mi high recorded
+  
   shared_preload_libraries: pg_stat_statements
   track_activity_query_size: 2048
 
