--- a/openstack/ironic/values.yaml
+++ b/openstack/ironic/values.yaml
@@ -178,6 +178,10 @@ postgresql:
     enabled: true
     metrics: true
     osPassword: null
+  resources:
+    requests:
+      cpu: "500m" # 1/2 cpu
+      memory: "500Mi" # 180Mi high recorded
   shared_preload_libraries: pg_stat_statements
   track_activity_query_size: 2048
 
