[keystone] added more k8s resource settings

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -110,25 +110,25 @@ api:
     imageTag: v0.8.1
     prefix: openstack
 
-#    resources:
-#      enabled: false
-#      requests:
-#        memory: 40Mi
-#        cpu: 100m
-#      limits:
-#        memory: 64Mi
-#        cpu: 500m
+    resources:
+      enabled: false
+      requests:
+        memory: 50Mi
+        cpu: 10m
+      limits:
+        memory: 64Mi
+        cpu: 50m
 
   terminationGracePeriodSeconds: 30
   minReadySeconds: 5
 
-#  resources:
-#    requests:
-#      memory: 1433Mi
-#      cpu: 1000m
-#    limits:
-#      memory: 2Gi
-#      cpu: 2000m
+  resources:
+    requests:
+      memory: 1433Mi
+      cpu: 500m
+    limits:
+      memory: 2Gi
+      cpu: 1000m
 
   replicas: 3
 
@@ -150,13 +150,13 @@ cron:
 
   replicas: 1
 
-#  resources:
-#    requests:
-#      memory: 1433Mi
-#      cpu: 400m
-#    limits:
-#      memory: 2Gi
-#      cpu: 2000m
+  resources:
+    requests:
+      memory: 1433Mi
+      cpu: 500m
+    limits:
+      memory: 2Gi
+      cpu: 1000m
 
   upgrades:
     revisionHistory: 3
@@ -178,7 +178,7 @@ tempest:
   domainId: not_set_this_in_production
 
 sentry:
-  enabled: false
+  enabled: true
 # dsn: put-your-sentry-dsn-here or leave it up to the sentry-operator to provide one in a k8s sentry secret
 
 services:
@@ -250,8 +250,8 @@ postgresql:
 
   resources:
     requests:
-      cpu: "500m" # 1/2 cpu
-      memory: "500Mi" # 370Mi high recorded
+      cpu: 500m
+      memory: 500Mi
 
 pgmetrics:
   db_name: keystone
