--- a/openstack/neutron/templates/deployment-ucs-bm-ml2-agent.yaml
+++ b/openstack/neutron/templates/deployment-ucs-bm-ml2-agent.yaml
@@ -1,4 +1,4 @@
-{{- if or (ne (len (keys .Values.cisco_ucsm_bm)) 1) (ne (index (keys .Values.cisco_ucsm_bm) 0) "example.com") -}}
+{{- if .Values.cisco_ucsm_bm -}}
 kind: Deployment
 apiVersion: extensions/v1beta1
 
