fix resource syntax

--- a/openstack/limes/templates/collect-deployment.yaml
+++ b/openstack/limes/templates/collect-deployment.yaml
@@ -61,18 +61,18 @@ spec:
             limits:
               {{- if eq $cluster_id "ccloud" }}
                 cpu: '1000m'
-                memory: '250MiB'
+                memory: '250Mi'
               {{- else }}
                 cpu: '20m'
-                memory: '50MiB'
+                memory: '50Mi'
               {{- end }}
             requests:
               {{- if eq $cluster_id "ccloud" }}
                 cpu: '250m'
-                memory: '250MiB'
+                memory: '250Mi'
               {{- else }}
                 cpu: '10m'
-                memory: '50MiB'
+                memory: '50Mi'
               {{- end }}
           {{- end }}
 ---
