--- a/openstack/limes/templates/api-deployment.yaml
+++ b/openstack/limes/templates/api-deployment.yaml
@@ -69,10 +69,10 @@ spec:
             # observed usage: CPU <= 10m, RAM = 25-70 MiB
             limits:
               cpu: '20m'
-              memory: '200MiB'
+              memory: '200Mi'
             requests:
               cpu: '10m'
-              memory: '50MiB'
+              memory: '50Mi'
           {{- end }}
 ---
 {{end}}
