use the _consistency values for the consistency nanny

--- a/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_consistency_deployment.yaml
+++ b/openstack/vcenter-utilities/templates/vcenter_datacenter_nanny_consistency_deployment.yaml
@@ -49,9 +49,9 @@ template: |{{`
               - name: DEPENDENCY_SERVICE
                 value: "nova-postgresql,nova-api"
               - name: VCENTER_CONSISTENCY_ENABLED
-                value: "`}}{{ .Values.vcenter_nanny.enabled }}{{`"
+                value: "`}}{{ .Values.vcenter_nanny_consistency.enabled }}{{`"
               - name: VCENTER_CONSISTENCY_DRY_RUN
-                value: "`}}{{ .Values.vcenter_nanny.dry_run }}{{`"
+                value: "`}}{{ .Values.vcenter_nanny_consistency.dry_run }}{{`"
               - name: VCENTER_CONSISTENCY_HOST
                 value: {{ host | quote }}
               - name: VCENTER_CONSISTENCY_USER
@@ -59,9 +59,9 @@ template: |{{`
               - name: VCENTER_CONSISTENCY_PASSWORD
                 value: {{ password | quote }}
               - name: VCENTER_CONSISTENCY_ITERATIONS
-                value: "`}}{{ .Values.vcenter_nanny.iterations }}{{`"
+                value: "`}}{{ .Values.vcenter_nanny_consistency.iterations }}{{`"
               - name: VCENTER_CONSISTENCY_INTERVAL
-                value: "`}}{{ .Values.vcenter_nanny.interval }}{{`"
+                value: "`}}{{ .Values.vcenter_nanny_consistency.interval }}{{`"
               - name: OS_AUTH_URL
                 value: "https://identity-3.{{ availability_zone[:-1] }}.cloud.sap:443/v3"
               - name: OS_PROJECT_NAME
