Remove "DEFINED-IN-SECRETS"
Co-Authored-By: onuryilmaz <onuryilmaz89@gmail.com>

--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -18,7 +18,7 @@ global:
     configmap_name: ipmi-sd
     netbox:
       enabled: false
-      api_token: DEFINED-IN-SECRETS
+    #api_token:
 
   ipmi_exporter:
     enabled: false
