required functions added to deployments

--- a/system/kube-monitoring/charts/ipmi-exporter/templates/deployment.yml
+++ b/system/kube-monitoring/charts/ipmi-exporter/templates/deployment.yml
@@ -27,9 +27,9 @@ spec:
           value: "{{ .Values.global.ipmi_password | default .Values.ipmi_password }}"
         {{- if .Values.global.ipmi_exporter.netbox.enabled }}
         - name: NETBOX_CP_USER
-          value: "{{ .Values.global.ipmi_username_cp | default .Values.ipmi_username_cp }}"
+          value: {{ required "ipmi_username_cp needs to be defined in global values" .Values.global.ipmi_username_cp }}
         - name: NETBOX_CP_PASSWORD
-          value: "{{ .Values.global.ipmi_password_cp | default .Values.ipmi_password_cp }}"
+          value: {{ required "ipmi_password_cp needs to be defined in global values" .Values.global.ipmi_password_cp }}
         {{- end }}
         ports:
         - containerPort: 9290
