--- a/system/kube-monitoring/charts/ipmi-service-discovery/templates/deployment.yml
+++ b/system/kube-monitoring/charts/ipmi-service-discovery/templates/deployment.yml
@@ -50,7 +50,7 @@ spec:
         - name: NETBOX
           value: "true"
         - name: NETBOX_API_TOKEN
-          value: {{ .Values.global.ipmi_service_discovery.netbox.api_token }}
+          value: {{ required "ipmi_service_discovery.netbox.api_token needs to be defined in global values" .Values.global.ipmi_service_discovery.netbox.api_token }}
         - name: OS_REGION
           value: {{ .Values.global.region }}
         {{- end }}
