--- a/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
@@ -12,11 +12,11 @@ spec:
   template:
     metadata:
       labels:
-        app: ironic_port_exporter
+        app: ironic_exporter
         type: exporter
     spec:
       containers:
-      - name: ironic-exporter
+      - name: ironic_exporter
         image: "{{ .Values.global.imageRegistry }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         env:
         - name: LOGLEVEL
