[keystone] added pre-deployment-hook to prevent deployments with wrong region configuration

--- a/openstack/keystone/templates/configmap-bin.yaml
+++ b/openstack/keystone/templates/configmap-bin.yaml
@@ -24,3 +24,5 @@ data:
   keystone-tempest.sh: |
 {{ include (print .Template.BasePath "/bin/_keystone_tempest.sh.tpl") . | indent 4 }}
 {{- end}}
+  region-check.py: |
+{{ .Files.Get "files/region-check.py" | indent 4 }}
