[keystone] disable pre-deployment-hook until underlying scripting has been deployed

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -19,6 +19,9 @@ run_db_migration: False
 # ignore invalid role assignments
 skipRepairRoleAssignments: False
 
+# suppress pre-deployment region check
+skipRegionCheck: True
+
 # current keystone release
 release: rocky
 
