--- a/openstack/keystone/templates/job-pre-upgrade.yaml
+++ b/openstack/keystone/templates/job-pre-upgrade.yaml
@@ -1,4 +1,5 @@
 {{- if .Release.IsUpgrade }}
+{{- if not .Values.skipRegionCheck }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -38,4 +39,5 @@ spec:
           configMap:
             name: keystone-bin
             defaultMode: 0755
+{{- end }}
 {{- end }}
