--- a/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
+++ b/system/kube-monitoring/charts/ironic-exporter/templates/deployment.yaml
@@ -14,6 +14,9 @@ spec:
       labels:
         app: ironic_exporter
         type: exporter
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "{{ .Values.port_number }}"
     spec:
       containers:
       - name: ironic_exporter
@@ -21,6 +24,8 @@ spec:
         env:
         - name: LOGLEVEL
           value: "{{ .Values.log_level }}"
+        - name: PORT_NUMBER
+          value: "{{ .Values.port_number }}"
         - name: OS_VERSION
           value: "{{ .Values.tag }}"
         - name: OS_IRONIC_USERNAME
