--- a/system/kube-monitoring/charts/ironic-exporter/values.yaml
+++ b/system/kube-monitoring/charts/ironic-exporter/values.yaml
@@ -1,6 +1,7 @@
 image:
   repository: monsoon/ironic-exporter
   tag: d4147666
+port_number:9191
 
 os_user_domain_name: "Default"
 os_project_name: "master"
