[keystone] run pre-deployment-hook as of next deployment

--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -20,7 +20,7 @@ run_db_migration: False
 skipRepairRoleAssignments: False
 
 # suppress pre-deployment region check
-skipRegionCheck: True
+skipRegionCheck: False
 
 # current keystone release
 release: rocky
