[openstack-seeder] added k8s resource figures

--- a/openstack/openstack-seeder/templates/deployment.yaml
+++ b/openstack/openstack-seeder/templates/deployment.yaml
@@ -59,6 +59,8 @@ spec:
                   key: seeder.DSN
             {{- end }}
             {{- end }}
+          resources:
+{{ toYaml .Values.resources | indent 12 }}
           volumeMounts:
             - mountPath: /scripts
               name: scripts
