--- a/openstack/neutron/templates/deployment-rpc-server.yaml
+++ b/openstack/neutron/templates/deployment-rpc-server.yaml
@@ -1,14 +1,15 @@
+{{- if .Values.wsgi }}
 kind: Deployment
 apiVersion: extensions/v1beta1
 
 metadata:
-  name: neutron-server
+  name: neutron-rpc-server
   labels:
     system: openstack
-    type: api
+    type: rpc
     component: neutron
 spec:
-  replicas: {{ if not .Values.pod.debug.server }}{{ .Values.pod.replicas.server }}{{ else }} 1 {{ end }}
+  replicas: 1
   revisionHistoryLimit: {{ .Values.pod.lifecycle.upgrades.deployments.revision_history }}
   strategy:
     type: {{ .Values.pod.lifecycle.upgrades.deployments.pod_replacement_strategy }}
@@ -19,11 +20,11 @@ spec:
     {{ end }}
   selector:
     matchLabels:
-      name: neutron-server
+      name: neutron-rpc-server
   template:
     metadata:
       labels:
-        name: neutron-server
+        name: neutron-rpc-server
 {{ tuple . "neutron" "api" | include "helm-toolkit.snippets.kubernetes_metadata_labels" | indent 8 }}
       annotations:
         configmap-etc-hash: {{ include (print $.Template.BasePath "/configmap-etc.yaml") . | sha256sum }}
@@ -35,34 +36,10 @@ spec:
         - name: neutron-server
           image: {{ default "hub.global.cloud.sap" .Values.global.imageRegistry }}/{{.Values.image_name}}:{{.Values.image_tag}}
           imagePullPolicy: IfNotPresent
-{{- if not .Values.pod.debug.server }}
-          livenessProbe:
-            httpGet:
-              path: /healthcheck
-              port: {{.Values.global.neutron_api_port_internal | default 9696}}
-            initialDelaySeconds: 120
-            timeoutSeconds: 5
-          readinessProbe:
-            httpGet:
-              path: /
-              port: {{.Values.global.neutron_api_port_internal | default 9696}}
-            initialDelaySeconds: 15
-            timeoutSeconds: 5
-{{- end }}
           command: ['dumb-init', 'kubernetes-entrypoint']
           env:
             - name: COMMAND
-{{- if .Values.wsgi }}
-              value: "uwsgi --procname-prefix neutron-api --ini /etc/neutron/uwsgi.ini"
-{{- else }}
-              value: "/container.init/neutron-server-start"
-{{- end }}
-            - name: DEBUG_CONTAINER
-            {{- if .Values.pod.debug.server }}
-              value: "true"
-            {{- else}}
-              value: "false"
-            {{- end }}
+              value: "neutron-rpc-server --config-file /etc/neutron/neutron.conf --config-file /etc/neutron/neutron_lbaas.conf --config-file /etc/neutron/plugins/ml2/ml2-conf.ini --config-file /etc/neutron/plugins/ml2/ml2-conf-f5.ini --config-file /etc/neutron/plugins/ml2/ml2-conf-aci.ini --config-file /etc/neutron/plugins/ml2/ml2-conf-manila.ini --config-file /etc/neutron/plugins/ml2/ml2-conf-arista.ini --config-file /etc/neutron/plugins/ml2/ml2-conf-asr1k.ini"
             - name: NAMESPACE
               value: {{ .Release.Namespace }}
             - name: DEPENDENCY_JOBS
@@ -84,36 +61,16 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
-          ports:
-            - name: neutron-api
-              containerPort: {{.Values.global.neutron_api_port_internal | default 9696}}
           volumeMounts:
-{{- if .Values.wsgi }}
             - mountPath: /etc/neutron
               name: empty-dir
             - mountPath: /etc/neutron/neutron.conf
               name: neutron-etc
               subPath: neutron.conf
               readOnly: true
-            - mountPath: /etc/neutron/uwsgi.ini
-              name: neutron-etc
-              subPath: uwsgi.ini
-              readOnly: true
             - mountPath: /etc/neutron/neutron_lbaas.conf
               name: neutron-etc
               subPath: neutron-lbaas.conf
-              readOnly: true
-            - mountPath: /etc/neutron/policy.json
-              name: neutron-etc
-              subPath: neutron-policy.json
-              readOnly: true
-            - mountPath: /etc/neutron/rootwrap.conf
-              name: neutron-etc
-              subPath: rootwrap.conf
-              readOnly: true
-            - mountPath: /etc/neutron/api-paste.ini
-              name: neutron-etc
-              subPath: api-paste.ini
               readOnly: true
             - mountPath: /etc/neutron/logging.conf
               name: neutron-etc
@@ -143,34 +100,6 @@ spec:
               name: neutron-etc-vendor
               subPath: ml2-conf-asr1k.ini
               readOnly: true
-{{- if .Values.audit.enabled }}
-            - mountPath: /etc/neutron/neutron_audit_map.yaml
-              name: neutron-etc
-              subPath: neutron_audit_map.yaml
-              readOnly: true
-{{- end }}
-{{- if .Values.watcher.enabled }}
-            - mountPath: /etc/neutron/watcher.yaml
-              name: neutron-etc
-              subPath: watcher.yaml
-              readOnly: true
-{{- end }}
-{{- else }}
-            - mountPath: /development
-              name: development
-            - mountPath: /neutron-etc
-              name: neutron-etc
-            - mountPath: /neutron-etc-vendor
-              name: neutron-etc-vendor
-            - mountPath: /neutron-etc-region
-              name: neutron-etc-region
-            - mountPath: /container.init
-              name: container-init
-{{- end }}
-{{- if .Values.pod.debug.server }}
-            - mountPath: /development
-              name: development
-{{- end }}
         - name: statsd
           image: prom/statsd-exporter:v0.8.1
           imagePullPolicy: IfNotPresent
@@ -198,12 +127,8 @@ spec:
         - name: neutron-etc-region
           configMap:
             name: neutron-etc-region
-{{- if .Values.pod.debug.server }}
-        - name: development
-          persistentVolumeClaim:
-            claimName: development-pvclaim
-{{- end }}
-        - name: container-init
+        - name: neutron-bin
           configMap:
             name: neutron-bin
             defaultMode: 0755
+{{- end}}
