[neutron] change updatestrategy of network-agent daemonset to onDelete

--- a/openstack/neutron/templates/daemonset-network_agents.yaml
+++ b/openstack/neutron/templates/daemonset-network_agents.yaml
@@ -8,9 +8,7 @@ metadata:
     component: agent
 spec:
   updateStrategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
+    type: OnDelete
   selector:
     matchLabels:
       component: agent
