[swift] add support for sapcc/swift-sentry

--- a/openstack/swift/values.yaml
+++ b/openstack/swift/values.yaml
@@ -62,6 +62,9 @@ memcached_servers:
   - memcached
 #  - memcached-tokens
 
+sentry:
+  enabled: true
+
 # If the swift cluster is shared across multiple openstack clusters, one can
 # start multiple proxy deployments connecting to the different keystone backends
 clusters:
@@ -78,7 +81,6 @@ clusters:
     swift_service_project: service
     swift_service_project_domain: Default
     swift_service_password: DEFINED_IN_REGION_CHART
-    sentry_dsn: DEFINED_IN_REGION_CHART
     replicas: 2
 
     # The default is using the cache.swift for token caching
