--- a/openstack/swift/templates/object-expirer-deployment.yaml
+++ b/openstack/swift/templates/object-expirer-deployment.yaml
@@ -48,6 +48,13 @@ spec:
           env:
             - name: DEBUG_CONTAINER
               value: "false"
+            {{- if .Values.sentry.enabled }}
+            - name: SENTRY_DSN
+              valueFrom:
+                secretKeyRef:
+                  name: sentry
+                  key: swift.DSN.public
+            {{- end }}
           volumeMounts:
             - mountPath: /swift-etc
               name: swift-etc
