--- a/openstack/swift/templates/proxy-deployment.yaml
+++ b/openstack/swift/templates/proxy-deployment.yaml
@@ -66,6 +66,13 @@ spec:
           env:
             - name: DEBUG_CONTAINER
               value: "false"
+            {{- if .Values.sentry.enabled }}
+            - name: SENTRY_DSN
+              valueFrom:
+                secretKeyRef:
+                  name: sentry
+                  key: swift.DSN.public
+            {{- end }}
           volumeMounts:
             - mountPath: /swift-etc
               name: swift-etc
@@ -122,6 +129,13 @@ spec:
               value: "info"
             - name: ADD_HOSTNAME_SUFFIX
               value: "true"
+            {{- if .Values.sentry.enabled }}
+            - name: SENTRY_DSN
+              valueFrom:
+                secretKeyRef:
+                  name: sentry
+                  key: swift.DSN.public
+            {{- end }}
           volumeMounts:
             - mountPath: /swift-etc
               name: swift-etc
