[swift] disable sentry by default

--- a/openstack/swift/values.yaml
+++ b/openstack/swift/values.yaml
@@ -63,7 +63,7 @@ memcached_servers:
 #  - memcached-tokens
 
 sentry:
-  enabled: true
+  enabled: false
 
 # If the swift cluster is shared across multiple openstack clusters, one can
 # start multiple proxy deployments connecting to the different keystone backends
