--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -16,9 +16,14 @@ global:
   ipmi_service_discovery:
     enabled: false
     configmap_name: ipmi-sd
+    netbox:
+      enabled: false
+    #api_token:
 
   ipmi_exporter:
     enabled: false
+    netbox:
+      enabled: false
 
   arista_exporter:
     enabled: false
