--- a/system/kube-monitoring/charts/ipmi-exporter/templates/deployment.yml
+++ b/system/kube-monitoring/charts/ipmi-exporter/templates/deployment.yml
@@ -25,6 +25,12 @@ spec:
           value: "{{ .Values.global.ipmi_username | default .Values.ipmi_username }}"
         - name: IPMI_PASSWORD
           value: "{{ .Values.global.ipmi_password | default .Values.ipmi_password }}"
+        {{- if .Values.global.ipmi_exporter.netbox.enabled }}
+        - name: NETBOX_CP_USER
+          value: {{ required "ipmi_username_cp needs to be defined in global values" .Values.global.ipmi_username_cp }}
+        - name: NETBOX_CP_PASSWORD
+          value: {{ required "ipmi_password_cp needs to be defined in global values" .Values.global.ipmi_password_cp }}
+        {{- end }}
         ports:
         - containerPort: 9290
 {{- end }}
