--- a/openstack/ironic/templates/migrate-nodes-kq.yaml
+++ b/openstack/ironic/templates/migrate-nodes-kq.yaml
@@ -53,7 +53,7 @@ python: |
 
         block_name = name.split('-')[-1]
         if not node.get('conductor_group'):
-            LOG.info("%s: Group -> '%s'", name, block_name)
+            LOG.info("Migrating node %s: Group -> '%s'", name, block_name)
             patch = [{"op": "replace", "path": "/conductor_group", "value": block_name}]
 
         if patch:
