[swift] fix typo

--- a/openstack/swift/templates/proxy-deployment.yaml
+++ b/openstack/swift/templates/proxy-deployment.yaml
@@ -66,7 +66,7 @@ spec:
           env:
             - name: DEBUG_CONTAINER
               value: "false"
-            {{- if .Values.sentry.enabled }}
+            {{- if $.Values.sentry.enabled }}
             - name: SENTRY_DSN
               valueFrom:
                 secretKeyRef:
