--- a/openstack/blackbox/charts/blackbox-tests-api/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-api/templates/deployment.yaml
@@ -25,6 +25,13 @@ spec:
             claimName: blackbox-tests-api
       containers:
         - name: pytest
+          resources:
+            requests:
+              cpu: 500m
+              memory: 500M
+            limits:
+              cpu: 900m
+              memory: 900M
 {{- if typeIs "float64" .Values.global.image.tag  }}{{/* https://github.com/kubernetes/helm/issues/1707 */}}
           image: {{.Values.global.image.repository}}:{{.Values.global.image.tag | printf "%0.f" }}
 {{- else }}
@@ -121,6 +128,13 @@ spec:
             initialDelaySeconds: 15
 
         - name: statsd
+          resources:
+            requests:
+              cpu: 2m
+              memory: 20M
+            limits:
+              cpu: 4m
+              memory: 30M
           image: prom/statsd-exporter:v0.8.1
           imagePullPolicy: IfNotPresent
           ports:
