--- a/openstack/blackbox/charts/blackbox-tests-canary/templates/deployment.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-canary/templates/deployment.yaml
@@ -273,7 +273,7 @@ spec:
                 secretKeyRef:
                   name: blackbox-tests-canary
                   key: vc.password
-{{- if .Values.osprofiler  }}
+{{- if eq .Values.global.osprofiler.enabled true }}
             - name: OS_PROFILER_HMACS
               valueFrom:
                 secretKeyRef:
