another try to check osprofiler param

--- a/openstack/blackbox/charts/blackbox-tests-canary/templates/secret.yaml
+++ b/openstack/blackbox/charts/blackbox-tests-canary/templates/secret.yaml
@@ -9,5 +9,5 @@ data:
   os.password: {{ .Values.global.openstack.users.admin.password | b64enc }}
   cc.password: {{ .Values.global.openstack.users.ccadmin.password | b64enc }}
   vc.password: {{ .Values.global.vcenter.password | b64enc }}
-  os.profiler.hmacs: {{ if eq .Values.global.osprofiler.enabled "true" }}{{ .Values.global.osprofiler.hmac_keys | b64enc }}{{ end }}
+  os.profiler.hmacs: {{ if (.Values.global.osprofiler.enabled) and eq .Values.global.osprofiler.enabled true }}{{ .Values.global.osprofiler.hmac_keys | b64enc }}{{ end }}
   jump.key: {{ .Values.global.jump.key | b64enc }}
